RESOLVED FIXED 260871
Include ObjC class name of decode failures in crash logs' register values
https://bugs.webkit.org/show_bug.cgi?id=260871
Summary Include ObjC class name of decode failures in crash logs' register values
Alex Christensen
Reported 2023-08-29 12:42:40 PDT
Attachments
Alex Christensen
Comment 1 2023-08-29 12:44:27 PDT
EWS
Comment 2 2023-08-29 14:49:54 PDT
Committed 267425@main (df817dbe1509): <https://commits.webkit.org/267425@main> Reviewed commits have been landed. Closing PR #17194 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.