Include ObjC class name of decode failures in crash logs' register values https://bugs.webkit.org/show_bug.cgi?id=260871 rdar://114119254

Reviewed by David Kilzer.

Logs in rdar://113527046 indicate something occasionally crashes here, but we don't know what.
This will help gather information about what occasionally crashes.

* Source/WebKit/Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(checkIfClassIsAllowed):

Canonical link: https://commits.webkit.org/267425@main